src/objects/maps__AdvRouteTemplateUser__c.object
<CustomObject>
    <description>These are the users associated to a Advanced Route template.
This object holds information needed to route the user</description>
    <fields>
        <fullName>maps__AdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the associated Advanced Route template for the user</description>
        <label>Maps Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Template Users</relationshipLabel>
        <relationshipName>AdvRouteTemplateUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AsyncApexJobId__c</fullName>
        <description>This is the job id for the asyncronous apex processing</description>
        <label>Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AutomaticOpStartsOn__c</fullName>
        <description>This is the date that the automatic optimization will start reoptimizing on.</description>
        <label>Automatic Op Starts On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__BaseUrl__c</fullName>
        <description>This is the base salesforce url; used in email templates</description>
        <formula>maps__AdvRouteTemplate__r.maps__BaseUrl__c</formula>
        <label>Base Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CurrentJobAttempts__c</fullName>
        <description>This field is to track how many times the current day has been attempted to route</description>
        <label>Current Job Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__CurrentProcessingStatusBulk__c</fullName>
        <description>These are the bulk processing statuses</description>
        <label>Current Processing Status Bulk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available For Submission</fullName>
                    <default>true</default>
                    <label>Available For Submission</label>
                </value>
                <value>
                    <fullName>Next Working Day Submitted</fullName>
                </value>
                <value>
                    <fullName>Building Route Request Needs Processing</fullName>
                </value>
                <value>
                    <fullName>Building Route Request</fullName>
                </value>
                <value>
                    <fullName>Routing Poll Submitted</fullName>
                </value>
                <value>
                    <fullName>Next Working Day Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__CurrentProcessingStatus__c</fullName>
        <description>This is used to determine where we are in the process and rather or not we need to kick off the next step.</description>
        <label>Current Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Object Priorities Submitted</fullName>
                </value>
                <value>
                    <fullName>Object Priorities Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Routing Submitted</fullName>
                </value>
                <value>
                    <fullName>Routing Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Routing Poll Submitted</fullName>
                </value>
                <value>
                    <fullName>Routing Poll Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Next Working Day Submitted</fullName>
                </value>
                <value>
                    <fullName>Next Working Day Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Available For Submission</fullName>
                    <default>true</default>
                    <label>Available For Submission</label>
                </value>
                <value>
                    <fullName>Geocoding Submitted</fullName>
                </value>
                <value>
                    <fullName>Geocoding Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__CurrentTemplateRangeStartDate__c</fullName>
        <description>This is the start date of the current template range for a repeating template</description>
        <label>Current Template Range Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__DateProcessing__c</fullName>
        <description>This is the date that is currently being routed</description>
        <label>Date Processing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__DeletePreviousRouteData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to delete previous advanced route generated output when reoptimizing</description>
        <label>Delete Previous Route Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__JobSubmittedAt__c</fullName>
        <description>This field tracks the last time a job was submitted</description>
        <label>Job Submitted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__KillRouteGeneration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean will be set to true if we need to kill the routing process for this template user</description>
        <label>Kill Route Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LastAutoOptimizationRunAt__c</fullName>
        <label>Last Auto Optimization Run At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LastFailedJobError__c</fullName>
        <description>This field is used to hold the last failed job&apos;s error of the routing job to be displayed in an email template</description>
        <label>Last Failed Job Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__LastJobStoppedStatus__c</fullName>
        <description>This field is used to hold the last stopped job status of the routing job to be displayed in an email template</description>
        <label>Last Job Stopped Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastLocation__c</fullName>
        <description>This is the last location registered by the user.  Used when routing the partial day from last location.</description>
        <label>Last Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__LastOptimizationRunAt__c</fullName>
        <description>This is the last time that a route optimization was run</description>
        <label>Last Optimization Run At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LastOptimizationSucceededAt__c</fullName>
        <description>This field tracks the last time a job was submitted and it was successful</description>
        <label>Last Optimization Succeeded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__NeedsDeleting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will flag a template user for batch deletion</description>
        <label>Needs Deleting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__NextEmailId__c</fullName>
        <description>This is the id of the next email to send out</description>
        <label>Next Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__OptimizeFromCurrentTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag lets us know if we are optimizing from the current time or the next day</description>
        <label>Optimize From Current Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ProcessRoutingNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox to let us know that the Queue Routing Batch needs to process this user</description>
        <label>Process Routing Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ReadyForUse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox determines if the template user is ready for the user to input their data and is also used to determine if the user is ready for routing</description>
        <label>Ready for Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__RoutingJobId__c</fullName>
        <description>This is the job id for the current route processing</description>
        <label>Routing Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutingStartedOn__c</fullName>
        <description>this is the date that the current reoptimization started on</description>
        <label>Routing Started On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__SendCompletionEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <label>Send Completion Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SendNextEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED: This was used to let us know if we needed to send out an email</description>
        <label>Send Next Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__StopRoutingOnDate__c</fullName>
        <description>This is the date that the current route process should generate till</description>
        <label>Stop Routing on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__UserEmail__c</fullName>
        <description>This is the email of the associated user</description>
        <label>User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__UserFirstName__c</fullName>
        <description>This is the first name of the associated user</description>
        <label>User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__UserLastName__c</fullName>
        <description>This is the last name of the associated user</description>
        <label>User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__UserTimeZoneKey__c</fullName>
        <description>This is the time zone key of the associated user</description>
        <label>User Time Zone Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user associated to the template</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdvRouteTemplateUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Advanced Route Template User</label>
    <nameField>
        <label>Maps Advanced Route Template User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Template Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>